update -- send message

--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script data-jsd-embedded data-key="177c4fd7-ee93-450b-9bc7-eed48cf7dc0b" data-base-url="https://jsd-widget.atlassian.com" src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
   </body>
 </html>
