--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
         data-base-url="https://jsd-widget.atlassian.com"
         src="https://jsd-widget.atlassian.com/assets/embed.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161162688-1"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162421231-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -32,7 +33,8 @@
 
     gtag('js', new Date());
 
-    gtag('config', 'UA-161162688-1');
+    gtag('config', 'UA-162421231-1');
 </script>
+
 </body>
 </html>
